# bitfiddlers

./: Cargo.toml  index.html  justfile
src/: calc.rs  main.rs  utl.rs
src/components/: app.rs  calc_table.rs  general.rs  mod.rs
