[package]
name = "bitfiddlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5.4", features = ["csr"] }
log = "0.4.20"
thiserror = "1.0.56"
